--- a/environment.yml
+++ b/environment.yml
@@ -1,37 +1,151 @@
 name: d:\CS\projects\graduation_project\.conda
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - _tflow_select=2.3.0=mkl
+  - absl-py=1.3.0=py310haa95532_0
+  - aiohttp=3.8.3=py310h2bbff1b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - ansi2html=1.8.0=py310h5588dad_1
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - astunparse=1.6.3=py_0
+  - async-timeout=4.0.2=py310haa95532_0
+  - attrs=22.1.0=py310haa95532_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - blas=1.0=mkl
+  - blinker=1.4=py310haa95532_0
+  - brotli-python=1.0.9=py310h8a704f9_7
+  - brotlipy=0.7.0=py310h2bbff1b_1002
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2022.10.11=haa95532_0
+  - ca-certificates=2022.12.7=h5b45459_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - cffi=1.15.1=py310h2bbff1b_3
+  - click=8.0.4=py310haa95532_0
+  - comm=0.1.2=py310haa95532_0
+  - cryptography=38.0.4=py310h21b164f_0
+  - cudatoolkit=11.3.1=h59b6b97_2
+  - cudnn=8.2.1.32=h754d62a_0
+  - cupy=10.5.0=py310h782d1bb_0
+  - dash=2.7.1=pyhd8ed1ab_0
+  - debugpy=1.5.1=py310hd77b12b_0
+  - entrypoints=0.4=py310haa95532_0
+  - fastrlock=0.8=py310h8a704f9_2
+  - fftw=3.3.9=h2bbff1b_1
+  - flask=2.2.2=pyhd8ed1ab_0
+  - flask-compress=1.13=pyhd8ed1ab_0
+  - flatbuffers=2.0.0=h6c2663c_0
+  - flit-core=3.6.0=pyhd3eb1b0_0
+  - frozenlist=1.3.3=py310h2bbff1b_0
+  - gast=0.4.0=pyhd3eb1b0_0
+  - giflib=5.2.1=h62dcd97_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
+  - google-pasta=0.2.0=pyhd3eb1b0_0
+  - grpcio=1.42.0=py310hc60d5dd_0
+  - h5py=3.7.0=py310hfc34f40_0
+  - hdf5=1.10.6=h1756f20_1
+  - icc_rt=2022.1.0=h6049295_2
+  - icu=58.2=ha925a31_3
+  - importlib-metadata=6.0.0=pyha770c72_0
+  - intel-openmp=2021.4.0=haa95532_3556
+  - ipython=8.7.0=py310haa95532_0
+  - itsdangerous=2.1.2=pyhd8ed1ab_0
+  - jedi=0.18.1=py310haa95532_1
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9e=h2bbff1b_0
+  - jupyter-dash=0.4.2=pyhd8ed1ab_1
+  - jupyter_client=7.4.8=py310haa95532_0
+  - jupyter_core=5.1.1=py310haa95532_0
+  - keras=2.10.0=py310haa95532_0
+  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
+  - libcurl=7.86.0=h86230a5_0
   - libffi=3.4.2=hd77b12b_6
+  - libpng=1.6.37=h2a8f88b_0
+  - libprotobuf=3.20.1=h23ce68f_0
+  - libsodium=1.0.18=h62dcd97_0
+  - libssh2=1.10.0=hcd4344a_0
+  - markdown=3.4.1=py310haa95532_0
+  - markupsafe=2.1.1=py310h2bbff1b_0
+  - matplotlib-inline=0.1.6=py310haa95532_0
+  - mkl=2021.4.0=haa95532_640
+  - mkl-service=2.4.0=py310h2bbff1b_0
+  - mkl_fft=1.3.1=py310ha0764ea_0
+  - mkl_random=1.2.2=py310h4ed8f06_0
+  - multidict=6.0.2=py310h2bbff1b_0
+  - numpy-base=1.23.5=py310h04254f7_0
+  - oauthlib=3.2.1=py310haa95532_0
   - openssl=1.1.1s=h2bbff1b_0
-  - pip=22.3.1=py310haa95532_0
+  - opt_einsum=3.3.0=pyhd3eb1b0_1
+  - packaging=22.0=py310haa95532_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - plotly=5.9.0=py310haa95532_0
+  - prompt-toolkit=3.0.36=py310haa95532_0
+  - psutil=5.9.0=py310h2bbff1b_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py310haa95532_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pysocks=1.7.1=py310haa95532_0
   - python=3.10.8=h966fe2a_1
-  - setuptools=65.5.0=py310haa95532_0
-  - sqlite=3.40.0=h2bbff1b_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-flatbuffers=2.0=pyhd3eb1b0_0
+  - python_abi=3.10=2_cp310
+  - pywin32=305=py310h2bbff1b_0
+  - requests=2.28.1=py310haa95532_0
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - scipy=1.9.3=py310h86744a3_0
+  - setuptools=65.6.3=py310haa95532_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.9=h6c2663c_0
+  - sqlite=3.40.1=h2bbff1b_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tenacity=8.0.1=py310haa95532_1
+  - tensorboard=2.10.0=py310haa95532_0
+  - tensorboard-data-server=0.6.1=py310haa95532_0
+  - tensorboard-plugin-wit=1.8.1=py310haa95532_0
+  - tensorflow=2.10.0=mkl_py310hd99672f_0
+  - tensorflow-base=2.10.0=mkl_py310h6a7f48e_0
+  - tensorflow-estimator=2.10.0=py310haa95532_0
+  - termcolor=2.1.0=py310haa95532_0
   - tk=8.6.12=h2bbff1b_0
+  - tornado=6.2=py310h2bbff1b_0
+  - traitlets=5.7.1=py310haa95532_0
+  - typing_extensions=4.4.0=py310haa95532_0
   - tzdata=2022g=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - werkzeug=2.2.2=py310haa95532_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py310haa95532_0
   - wincertstore=0.2=py310haa95532_2
+  - wrapt=1.14.1=py310h2bbff1b_0
   - xz=5.2.8=h8cc25b3_0
+  - yarl=1.8.1=py310h2bbff1b_0
+  - zeromq=4.3.4=hd77b12b_0
+  - zipp=3.11.0=pyhd8ed1ab_0
   - zlib=1.2.13=h8cc25b3_0
   - pip:
     - astroid==2.12.13
-    - attrs==22.1.0
+    - autopep8==2.0.1
     - beautifulsoup4==4.11.1
     - bs4==0.0.1
     - certifi==2022.6.15.1
-    - cffi==1.15.1
     - charset-normalizer==2.1.1
     - chart-studio==1.1.0
     - colorama==0.4.5
     - colorlover==0.3.0
     - contourpy==1.0.6
-    - cryptography==38.0.1
     - cufflinks==0.17.3
+    - dash-core-components==2.0.0
+    - dash-html-components==2.0.0
+    - dash-table==5.0.0
     - decorator==4.4.2
     - dill==0.3.6
     - executing==1.0.0
@@ -42,15 +156,18 @@ dependencies:
     - imageio==2.21.3
     - imageio-ffmpeg==0.4.7
     - imagesize==1.4.1
-    - ipykernel==6.15.2
+    - ipykernel==6.19.4
     - ipympl==0.9.2
     - ipython-genutils==0.2.0
     - ipywidgets==8.0.3
     - isort==5.11.2
+    - jpype1==1.4.1
     - jsonschema==4.17.3
     - jupyterlab-widgets==3.0.3
     - kiwisolver==1.4.4
     - lazy-object-proxy==1.8.0
+    - libclang==15.0.6.1
+    - line-profiler==4.0.2
     - matplotlib==3.6.2
     - mccabe==0.7.0
     - moviepy==1.0.3
@@ -60,35 +177,37 @@ dependencies:
     - opencv-python==4.6.0.66
     - pandas==1.4.4
     - pillow==9.2.0
+    - pip==22.3.1
     - platformdirs==2.6.0
-    - plotly==5.11.0
     - prawcore==2.3.0
     - proglog==0.1.10
-    - pycparser==2.21
+    - protobuf==3.19.6
+    - py5==0.9.0.dev0
+    - pycodestyle==2.10.0
     - pylint==2.15.8
     - pyparsing==3.0.9
     - pyrsistent==0.19.2
-    - python-dateutil==2.8.2
     - python-dotenv==0.21.0
     - pytz==2022.2.1
     - pyzmq==23.2.1
     - regex==2022.8.17
-    - requests==2.28.1
     - retrying==1.3.4
     - selenium==3.141.0
-    - six==1.16.0
     - soupsieve==2.3.2.post1
+    - split-folders==0.5.1
     - stack-data==0.5.0
-    - tenacity==8.1.0
+    - stackprinter==0.2.10
+    - tensorflow-addons==0.19.0
+    - tensorflow-io-gcs-filesystem==0.29.0
     - tomli==2.0.1
     - tomlkit==0.11.6
     - tqdm==4.64.1
-    - traitlets==5.3.0
+    - typeguard==2.13.3
     - update-checker==0.18.0
     - urllib3==1.26.12
     - webdriver-manager==3.8.5
     - websocket-client==1.4.1
     - wget==3.2
     - widgetsnbextension==4.0.3
-    - wrapt==1.14.1
+    - zlib-state==0.1.5
 prefix: d:\CS\projects\graduation_project\.conda
