added info about academic photos/digital images in dataset_preprocessing_part_2, and removed fb and twitter images from the current project scope

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 imgurApi.txt
 Selfie-*
 dataset/*
+dataset_old/*
 dataset_split/*
 dataset_phone_preview/*
+dataset_related/forAcademicPhotos/*
 models/*
 dataset_related/Original Dataset - Results On Test Data (without compression).html
