--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 name: d:\CS\projects\graduation_project\.conda
 channels:
   - esri
-  - conda-forge
   - plotly
+  - conda-forge
   - anaconda
   - defaults
 dependencies:
@@ -19,7 +19,6 @@ dependencies:
   - asttokens=2.0.5=pyhd3eb1b0_0
   - astunparse=1.6.3=py_0
   - async-timeout=4.0.2=py39haa95532_0
-  - async_generator=1.10=pyhd3eb1b0_0
   - attrs=22.1.0=py39haa95532_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - beautifulsoup4=4.11.1=py39haa95532_0
@@ -31,9 +30,9 @@ dependencies:
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotli-python=1.0.9=py39hd77b12b_7
   - brotlipy=0.7.0=py39h2bbff1b_1003
-  - ca-certificates=2022.10.11=haa95532_0
+  - ca-certificates=2022.12.7=h5b45459_0
   - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2022.12.7=py39haa95532_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py39h2bbff1b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - chart-studio=1.1.0=py_0
@@ -56,7 +55,6 @@ dependencies:
   - fftw=3.3.9=h2bbff1b_1
   - flask=2.2.2=py39haa95532_0
   - flask-compress=1.13=py39haa95532_0
-  - flatbuffers=2.0.0=h6c2663c_0
   - flit-core=3.6.0=pyhd3eb1b0_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
@@ -67,12 +65,12 @@ dependencies:
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=pyhd3eb1b0_0
   - grpcio=1.42.0=py39hc60d5dd_0
-  - h11=0.12.0=pyhd3eb1b0_0
   - h5py=3.7.0=py39h3de5c98_0
   - hdf5=1.10.6=h1756f20_1
   - icc_rt=2022.1.0=h6049295_2
   - icu=68.1=h6c2663c_0
   - idna=3.4=py39haa95532_0
+  - imageio=2.25.0=pyh24c5eb1_0
   - imagesize=1.3.0=pyhd3eb1b0_0
   - importlib-metadata=4.11.3=py39haa95532_0
   - intel-openmp=2021.4.0=haa95532_3556
@@ -140,7 +138,6 @@ dependencies:
   - oauthlib=3.2.1=py39haa95532_0
   - openssl=1.1.1s=h2bbff1b_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
-  - outcome=1.1.0=pyhd3eb1b0_0
   - packaging=22.0=py39haa95532_0
   - pandas=1.4.2=py39hd77b12b_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
@@ -158,7 +155,6 @@ dependencies:
   - pyasn1=0.4.8=pyhd3eb1b0_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.11.2=pyhd3eb1b0_0
   - pyjwt=2.4.0=py39haa95532_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=py39haa95532_0
@@ -170,7 +166,6 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-dotenv=0.21.0=py39haa95532_0
   - python-fastjsonschema=2.16.2=py39haa95532_0
-  - python-flatbuffers=1.12=pyhd3eb1b0_0
   - python_abi=3.9=2_cp39
   - pytz=2022.7=py39haa95532_0
   - pywin32=305=py39h2bbff1b_0
@@ -183,13 +178,11 @@ dependencies:
   - retrying=1.3.3=pyhd3eb1b0_2
   - rsa=4.7.2=pyhd3eb1b0_1
   - scikit-learn=1.0.2=py39hf11a4ad_1
-  - scipy=1.9.3=py39he11b74f_0
   - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=65.6.3=py39haa95532_0
   - six=1.16.0=pyhd3eb1b0_1
   - snappy=1.1.9=h6c2663c_0
   - sniffio=1.2.0=py39haa95532_1
-  - sortedcontainers=2.4.0=pyhd3eb1b0_0
   - soupsieve=2.3.2.post1=py39haa95532_0
   - sqlite=3.40.1=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
@@ -210,8 +203,6 @@ dependencies:
   - tornado=6.2=py39h2bbff1b_0
   - tqdm=4.64.1=pyhd8ed1ab_0
   - traitlets=5.7.1=py39haa95532_0
-  - trio=0.19.0=py39haa95532_0
-  - trio-websocket=0.9.2=pyhd8ed1ab_0
   - typeguard=2.13.0=py_1
   - typing-extensions=4.4.0=py39haa95532_0
   - typing_extensions=4.4.0=py39haa95532_0
@@ -230,7 +221,6 @@ dependencies:
   - wincertstore=0.2=py39haa95532_2
   - winpty=0.4.3=4
   - wrapt=1.14.1=py39h2bbff1b_0
-  - wsproto=1.2.0=pyhd8ed1ab_0
   - xz=5.2.8=h8cc25b3_0
   - yarl=1.8.1=py39h2bbff1b_0
   - zeromq=4.3.4=hd77b12b_0
@@ -238,10 +228,91 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.2=h19a0ad4_0
   - pip:
+      - aiohttp-retry==2.8.3
+      - amqp==5.1.1
+      - ansiwrap==0.8.4
+      - antlr4-python3-runtime==4.9.3
+      - appdirs==1.4.4
+      - asyncssh==2.13.0
+      - atpublic==3.1.1
+      - billiard==3.6.4.0
+      - celery==5.2.7
+      - clang==5.0
+      - click-didyoumean==0.3.0
+      - click-plugins==1.1.1
+      - click-repl==0.2.0
+      - configobj==5.0.8
+      - dictdiffer==0.9.0
+      - diskcache==5.4.0
+      - distro==1.8.0
+      - dpath==2.1.4
+      - dulwich==0.21.2
+      - dvc==2.45.0
+      - dvc-data==0.40.1
+      - dvc-http==2.30.2
+      - dvc-objects==0.19.3
+      - dvc-render==0.1.2
+      - dvc-studio-client==0.4.0
+      - dvc-task==0.1.11
+      - dvclive==2.0.2
+      - exifread==3.0.0
+      - fastrlock==0.8.1
+      - filelock==3.9.0
+      - flatbuffers==1.12
+      - flatten-dict==0.4.2
+      - flufl-lock==7.1.1
+      - fsspec==2023.1.0
+      - funcy==1.18
+      - gitdb==4.0.10
+      - gitpython==3.1.30
+      - grandalf==0.8
       - helium==3.0.9
+      - hydra-core==1.3.1
+      - image-to-numpy==1.0.0
+      - ipyparallel==8.4.1
+      - iterative-telemetry==0.0.7
+      - kombu==5.2.4
+      - markdown-it-py==2.1.0
+      - mdurl==0.1.2
+      - nanotime==0.5.2
+      - networkx==3.0
+      - ninja==1.11.1
+      - omegaconf==2.3.0
       - opencv-contrib-python==4.7.0.68
+      - orjson==3.8.6
+      - papermill==2.4.0
+      - pathspec==0.11.0
+      - pyarrow==10.0.1
+      - pyclipper==1.3.0.post4
+      - pydot==1.4.2
+      - pygit2==1.11.1
+      - pygments==2.14.0
+      - pygtrie==2.5.0
       - pyqt5-sip==4.19.18
       - pyqtchart==5.12
       - pyqtwebengine==5.12.1
+      - pytesseract==0.3.10
+      - python-magic==0.4.27
+      - pyyaml==6.0
+      - retina-face==0.0.13
+      - rich==13.3.1
+      - ruamel-yaml==0.17.21
+      - ruamel-yaml-clib==0.2.7
+      - scipy==1.9.3
+      - scmrepo==0.1.9
       - selenium==3.141.0
+      - shapely==2.0.1
+      - shortuuid==1.0.11
+      - shtab==1.5.8
+      - smmap==5.0.0
+      - split-folders==0.5.1
+      - sqltrie==0.0.28
+      - tabulate==0.9.0
+      - textwrap3==0.9.2
+      - tifffile==2023.2.28
+      - tomlkit==0.11.6
+      - torch==1.13.1
+      - vine==5.0.0
+      - voluptuous==0.13.1
+      - zc-lockfile==2.0
 prefix: d:\CS\projects\graduation_project\.conda
