--- a/environment.yml
+++ b/environment.yml
@@ -149,7 +149,6 @@ dependencies:
   - plotly=5.9.0=py39haa95532_0
   - prometheus_client=0.14.1=py39haa95532_0
   - prompt-toolkit=3.0.36=py39haa95532_0
-  - protobuf=3.17.2=py39hd77b12b_0
   - psutil=5.9.0=py39h2bbff1b_0
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pyasn1=0.4.8=pyhd3eb1b0_0
@@ -228,13 +227,19 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.2=h19a0ad4_0
   - pip:
+      - aiofiles==23.1.0
       - aiohttp-retry==2.8.3
+      - altair==4.2.2
       - amqp==5.1.1
       - ansiwrap==0.8.4
       - antlr4-python3-runtime==4.9.3
       - appdirs==1.4.4
+      - arabic-reshaper==3.0.0
       - asyncssh==2.13.0
       - atpublic==3.1.1
+      - attrdict==2.0.1
+      - babel==2.12.1
+      - bce-python-sdk==0.8.79
       - billiard==3.6.4.0
       - celery==5.2.7
       - clang==5.0
@@ -242,6 +247,9 @@ dependencies:
       - click-plugins==1.1.1
       - click-repl==0.2.0
       - configobj==5.0.8
+      - cssselect==1.2.0
+      - cssutils==2.6.0
+      - cython==0.29.33
       - dictdiffer==0.9.0
       - diskcache==5.4.0
       - distro==1.8.0
@@ -255,64 +263,128 @@ dependencies:
       - dvc-studio-client==0.4.0
       - dvc-task==0.1.11
       - dvclive==2.0.2
+      - easydict==1.10
+      - editdistance==0.6.2
+      - efficientnet==1.0.0
+      - essential-generators==1.0
+      - et-xmlfile==1.1.0
       - exifread==3.0.0
+      - fastapi==0.93.0
       - fastrlock==0.8.1
+      - ffmpy==0.3.0
       - filelock==3.9.0
+      - fire==0.5.0
+      - flask-babel==3.0.1
       - flatbuffers==1.12
       - flatten-dict==0.4.2
       - flufl-lock==7.1.1
       - fsspec==2023.1.0
       - funcy==1.18
+      - future==0.18.3
+      - gevent==22.10.2
+      - geventhttpclient==2.0.2
       - gitdb==4.0.10
       - gitpython==3.1.30
+      - gradio==3.20.1
       - grandalf==0.8
+      - greenlet==2.0.2
+      - h11==0.14.0
       - helium==3.0.9
+      - httpcore==0.16.3
+      - httpx==0.23.3
       - hydra-core==1.3.1
       - image-to-numpy==1.0.0
+      - imgaug==0.4.0
       - ipyparallel==8.4.1
       - iterative-telemetry==0.0.7
+      - jieba==0.42.1
+      - keras-applications==1.0.8
+      - keras-ocr==0.9.2
       - kombu==5.2.4
+      - linkify-it-py==1.0.3
+      - lmdb==1.4.0
       - markdown-it-py==2.1.0
+      - mdit-py-plugins==0.3.3
       - mdurl==0.1.2
+      - mpmath==1.3.0
       - nanotime==0.5.2
       - networkx==3.0
       - ninja==1.11.1
       - omegaconf==2.3.0
-      - opencv-contrib-python==4.7.0.68
+      - onnx==1.13.1
+      - opencv-contrib-python==4.6.0.66
+      - opencv-python==4.7.0.72
+      - openpyxl==3.1.1
       - orjson==3.8.6
+      - paddle-bfloat==0.1.7
+      - paddle2onnx==1.0.5
+      - paddleocr==2.6.1.3
+      - paddlepaddle==2.4.2
+      - paddlepaddle-gpu==2.4.2
       - papermill==2.4.0
       - pathspec==0.11.0
+      - pdf2docx==0.5.6
+      - piexif==1.1.3
+      - plum-py==0.8.5
+      - premailer==3.10.0
+      - protobuf==3.20.0
       - pyarrow==10.0.1
       - pyclipper==1.3.0.post4
+      - pycryptodome==3.17
+      - pydantic==1.10.5
       - pydot==1.4.2
+      - pydub==0.25.1
       - pygit2==1.11.1
       - pygments==2.14.0
       - pygtrie==2.5.0
+      - pymupdf==1.20.2
       - pyqt5-sip==4.19.18
       - pyqtchart==5.12
       - pyqtwebengine==5.12.1
       - pytesseract==0.3.10
+      - python-docx==0.8.11
       - python-magic==0.4.27
+      - python-multipart==0.0.6
+      - python-rapidjson==1.9
       - pyyaml==6.0
+      - rapidfuzz==2.13.7
+      - rarfile==4.0
       - retina-face==0.0.13
+      - rfc3986==1.5.0
       - rich==13.3.1
       - ruamel-yaml==0.17.21
       - ruamel-yaml-clib==0.2.7
-      - scipy==1.9.3
+      - scipy==1.9.1
       - scmrepo==0.1.9
       - selenium==3.141.0
+      - sentencepiece==0.1.97
       - shapely==2.0.1
       - shortuuid==1.0.11
       - shtab==1.5.8
       - smmap==5.0.0
       - split-folders==0.5.1
       - sqltrie==0.0.28
+      - starlette==0.25.0
+      - sympy==1.11.1
       - tabulate==0.9.0
       - textwrap3==0.9.2
       - tifffile==2023.2.28
       - tomlkit==0.11.6
+      - toolz==0.12.0
       - torch==1.13.1
+      - torchaudio==0.13.1
+      - tritonclient==2.31.0
+      - uc-micro-py==1.0.1
+      - unicodedata2==15.0.0
+      - uvicorn==0.20.0
+      - validators==0.20.0
       - vine==5.0.0
+      - visualdl==2.5.1
       - voluptuous==0.13.1
+      - websockets==10.4
+      - x2paddle==1.4.0
+      - xxhash==3.2.0
       - zc-lockfile==2.0
+      - zope-event==4.6
+      - zope-interface==5.5.2
 prefix: d:\CS\projects\graduation_project\.conda
