almost completed the get_img_props functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ dataset_old/*
 dataset_split/*
 dataset_phone_preview/*
 dataset_related/forAcademicPhotos/*
-models/*
 dataset_related/Original Dataset - Results On Test Data (without compression).html
+models/*
+secrets/*
+secrets/chatgbt_prompts.txt
