updated .gitignore to ignore large imgsPropsv2.csv

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ secrets/chatgbt_prompts.txt
 dataset_related/Egyptian_Arabic_Conversational_Speech_Corpus/*
 dataset_related/archive_2/*
 academicimagestemp/*
+dataset_related/imgsPropsv2.csv
