--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ dataset_related/Egyptian_Arabic_Conversational_Speech_Corpus/*
 dataset_related/archive_2/*
 academicimagestemp/*
 dataset_related/imgsPropsv2.csv
+dataset_related/no metadata, rgb, 306x306, 30 epochs, no augmentation, tf - Results On Test Data.html
