trained model_v01 on 32 batch size

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ dataset_related/m01cnn on test df, class and probs sorting, no metadata, rgb, 30
 dataset_related/m01cnn on test df, probs sorting, no metadata, rgb, 306x306, 30 epochs, no augmentation, tf.html
 dataset_related/m01cnn on test df, class and probs sorting, no metadata, 8 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
 dataset_related/m01cnn on test df, probs sorting, no metadata, 8 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m01.1cnn on test df, class and probs sorting, no metadata, 32 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m01.1cnn on test df, probs sorting, no metadata, 32 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
