--- a/environment.yml
+++ b/environment.yml
@@ -293,6 +293,7 @@ dependencies:
   - gitpython==3.1.30
   - gradio==3.20.1
   - grandalf==0.8
+  - graphviz==0.20.1
   - greenlet==2.0.2
   - h11==0.14.0
   - helium==3.0.9
@@ -306,6 +307,7 @@ dependencies:
   - jieba==0.42.1
   - keras-applications==1.0.8
   - keras-ocr==0.9.2
+  - keras-visualizer==3.1.1
   - kombu==5.2.4
   - libqutrub==1.2.4.1
   - line_profiler==4.0.3
@@ -353,6 +355,7 @@ dependencies:
   - pygments==2.14.0
   - pygtrie==2.5.0
   - pymupdf==1.20.2
+  - pyparsing==3.0.9
   - pyqt5-sip==4.19.18
   - pyqtchart==5.12
   - pyqtwebengine==5.12.1
