trained on model_v02 colors alone, then mmscaled colors and face

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ dataset_related/m01.1cnn on test df, class and probs sorting, no metadata, 32 ba
 dataset_related/m01.1cnn on test df, probs sorting, no metadata, 32 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
 dataset_related/m01.3cnn on test df, class and probs sorting, no metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
 dataset_related/m01.3cnn on test df, probs sorting, no metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m01.4cnn on test df, class and probs sorting, no metadata, 16 batch size, rgb, 306x306, 30 epochs, rescaled, tf.html
+dataset_related/m01.4cnn on test df, probs sorting, no metadata, 16 batch size, rgb, 306x306, 30 epochs, rescaled, tf.html
+dataset_related/m02cnn on test df, class and probs sorting, color metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m02cnn on test df, probs sorting, color metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m02.1cnn on test df, class and probs sorting, color-face metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
+dataset_related/m02.1cnn on test df, probs sorting, color-face metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html
