--- a/environment.yml
+++ b/environment.yml
@@ -362,6 +362,7 @@ dependencies:
   - rich==13.3.1
   - ruamel-yaml-clib==0.2.7
   - ruamel-yaml==0.17.21
+  - scipy==1.10.1
   - scipy==1.9.1
   - scmrepo==0.1.9
   - selenium==3.141.0
@@ -370,6 +371,7 @@ dependencies:
   - shapely==2.0.1
   - shortuuid==1.0.11
   - shtab==1.5.8
+  - simple-hierarchy==1.0.2
   - smmap==5.0.0
   - split-folders==0.5.1
   - sqltrie==0.0.28
@@ -384,7 +386,9 @@ dependencies:
   - tifffile==2023.2.28
   - tomlkit==0.11.6
   - toolz==0.12.0
+  - torch-summary==1.4.5
   - torch==2.0.0
+  - torchview==0.2.6
   - torchvision==0.15.1
   - tritonclient==2.31.0
   - uc-micro-py==1.0.1
@@ -400,6 +404,7 @@ dependencies:
   - wheel==0.35.1
   - wordsegment==1.3.1
   - x2paddle==1.4.0
+  - xgboost==1.7.5
   - xxhash==3.2.0
   - yarg==0.1.9
   - zc-lockfile==2.0
