--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ dataset_related/archive_2/*
 academicimagestemp/*
 dataset_related/imgsPropsv2.csv
 dataset_related/*.html
+dataset_related/test_data_features_v01.csv
+dataset_related/train_data_features_v01.csv
+dataset_related/val_data_features_v01.csv
