--- a/environment.yml
+++ b/environment.yml
@@ -285,6 +285,7 @@ dependencies:
   - ipyparallel==8.4.1
   - iterative-telemetry==0.0.7
   - jieba==0.42.1
+  - joblib==1.1.1
   - keras-applications==1.0.8
   - keras-ocr==0.9.2
   - keras-visualizer==3.1.1
@@ -331,6 +332,7 @@ dependencies:
   - premailer==3.10.0
   - protobuf==3.20.0
   - psutil==5.9.0
+  - pyaml==21.10.1
   - pyarabic==0.6.15
   - pyarrow==11.0.0
   - pyclipper==1.3.0.post4
@@ -362,6 +364,8 @@ dependencies:
   - rich==13.3.1
   - ruamel-yaml-clib==0.2.7
   - ruamel-yaml==0.17.21
+  - scikit-learn==1.0.2
+  - scikit-optimize==0.9.0
   - scipy==1.10.1
   - scipy==1.9.1
   - scmrepo==0.1.9
