--- a/environment.yml
+++ b/environment.yml
@@ -31,6 +31,7 @@ dependencies:
   - blessed=1.19.1=pyh95a074a_2
   - blinker=1.4=py39haa95532_0
   - boltons=23.0.0=py39haa95532_0
+  - boost-cpp=1.78.0=h5b4e17d_0
   - bottleneck=1.3.5=py39h080aedc_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
@@ -41,6 +42,7 @@ dependencies:
   - ca-certificates=2023.01.10=haa95532_0
   - cachecontrol=0.12.11=py39haa95532_1
   - cachetools=4.2.2=pyhd3eb1b0_0
+  - cairo=1.16.0=h63a05c6_1001
   - certifi=2022.12.7=py39haa95532_0
   - cffi=1.15.1=py39h2bbff1b_3
   - chardet=4.0.0=py39haa95532_1003
@@ -88,30 +90,45 @@ dependencies:
   - eigen=3.3.7=h59b6b97_1
   - entrypoints=0.4=py39haa95532_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.5.0=h63175ca_1
   - fastapi=0.88.0=pyhd8ed1ab_0
   - ffmpeg=4.2.2=he774522_0
   - filelock=3.9.0=py39haa95532_0
   - flask=2.2.2=py39haa95532_0
   - flask-compress=1.13=py39haa95532_0
   - flatbuffers=2.0.0=h6c2663c_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.1=h9c4af85_2
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
+  - fribidi=1.0.10=h8d14728_0
   - frozenlist=1.3.3=py39h2bbff1b_0
   - fsspec=2023.4.0=py39haa95532_0
   - future=0.18.3=py39haa95532_0
   - gast=0.4.0=pyhd3eb1b0_0
+  - gdown=4.7.1=pyhd8ed1ab_0
+  - getopt-win32=0.1=h8ffe710_0
   - giflib=5.2.1=h8cc25b3_3
   - glib=2.69.1=h5dc1a3c_2
   - glob2=0.7=pyhd3eb1b0_0
   - google-auth=2.6.0=pyhd3eb1b0_0
   - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
   - google-pasta=0.2.0=pyhd3eb1b0_0
+  - graphite2=1.3.14=hd77b12b_1
+  - graphviz=2.50.0=h7eca76f_1
   - grpc-cpp=1.48.2=hf108199_0
   - grpcio=1.48.2=py39hf108199_0
   - gst-plugins-base=1.18.5=h9e645db_0
   - gstreamer=1.18.5=hd78058f_0
+  - gts=0.7.6=h69fa6b1_0
   - h11=0.12.0=pyhd3eb1b0_0
   - h5py=3.7.0=py39h3de5c98_0
+  - harfbuzz=4.3.0=hb646838_1
   - hdf5=1.10.6=h1756f20_1
   - helium=3.0.9=py39_0
   - html5lib=1.1=pyhd3eb1b0_0
@@ -127,7 +144,7 @@ dependencies:
   - ipykernel=6.19.2=py39hd4e2768_0
   - ipython=8.12.0=py39haa95532_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - ipywidgets=8.0.4=py39haa95532_0
+  - ipywidgets=7.7.2=pyhd8ed1ab_0
   - itsdangerous=2.0.1=pyhd3eb1b0_0
   - jaraco.classes=3.2.1=pyhd3eb1b0_0
   - jedi=0.18.1=py39haa95532_1
@@ -148,12 +165,13 @@ dependencies:
   - jupyterlab=3.5.3=py39haa95532_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.22.0=py39haa95532_0
-  - jupyterlab_widgets=3.0.5=py39haa95532_0
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
   - keras=2.10.0=py39haa95532_0
   - keras-preprocessing=1.1.2=pyhd3eb1b0_0
   - keyring=23.13.1=py39haa95532_0
   - kiwisolver=1.4.4=py39hd77b12b_0
   - krb5=1.19.4=h5b6d351_0
+  - lcms2=2.15=ha5c8aab_0
   - lerc=3.0=hd77b12b_0
   - libarchive=3.6.2=h2033e3e_1
   - libbrotlicommon=1.0.9=h2bbff1b_7
@@ -173,7 +191,9 @@ dependencies:
   - libcusparse=11.7.5.86=0
   - libcusparse-dev=11.7.5.86=0
   - libdeflate=1.17=h2bbff1b_0
+  - libexpat=2.5.0=h63175ca_1
   - libffi=3.4.2=hd77b12b_6
+  - libgd=2.3.3=hd77b12b_2
   - libiconv=1.16=h2bbff1b_2
   - liblief=0.12.3=hd77b12b_0
   - libnpp=11.8.0.86=0
@@ -195,6 +215,7 @@ dependencies:
   - lightning=2.0.1.post0=pyhd8ed1ab_0
   - lightning-cloud=0.5.34=pyhd8ed1ab_0
   - lightning-utilities=0.7.1=py39haa95532_0
+  - line_profiler=4.0.2=py39h748ffb7_0
   - lockfile=0.12.2=py39haa95532_0
   - lxml=4.9.2=py39h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
@@ -233,6 +254,7 @@ dependencies:
   - numpy-base=1.24.3=py39h005ec55_0
   - oauthlib=3.2.2=py39haa95532_0
   - opencv=4.6.0=py39hf11a4ad_3
+  - openjpeg=2.4.0=h4fc8c34_0
   - openssl=1.1.1t=h2bbff1b_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - ordered-set=4.1.0=pyhd8ed1ab_0
@@ -240,12 +262,14 @@ dependencies:
   - packaging=23.0=py39haa95532_0
   - pandas=1.5.3=py39hf11a4ad_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - pango=1.50.7=h78c2152_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pcre=8.45=hd77b12b_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.4.0=py39hd77b12b_0
   - pip=23.0.1=py39haa95532_0
+  - pixman=0.38.0=hfa6e2cd_1003
   - pkginfo=1.9.6=py39haa95532_0
   - platformdirs=2.5.2=py39haa95532_0
   - plotly=5.9.0=py39haa95532_0
@@ -255,6 +279,8 @@ dependencies:
   - poetry-core=1.5.1=py39haa95532_0
   - poetry-plugin-export=1.3.0=py39hfacae44_0
   - pooch=1.4.0=pyhd3eb1b0_0
+  - poppler=22.12.0=h268424c_0
+  - poppler-data=0.4.12=hd8ed1ab_0
   - prometheus_client=0.14.1=py39haa95532_0
   - prompt-toolkit=3.0.36=py39haa95532_0
   - prompt_toolkit=3.0.36=hd3eb1b0_0
@@ -285,6 +311,7 @@ dependencies:
   - python-editor=1.0.4=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py39haa95532_0
   - python-flatbuffers=2.0=pyhd3eb1b0_0
+  - python-graphviz=0.20.1=pyh22cad53_0
   - python-installer=0.6.0=py39haa95532_0
   - python-libarchive-c=2.9=pyhd3eb1b0_1
   - python-multipart=0.0.6=pyhd8ed1ab_0
@@ -311,6 +338,7 @@ dependencies:
   - requests=2.29.0=py39haa95532_0
   - requests-oauthlib=1.3.0=py_0
   - requests-toolbelt=0.9.1=pyhd3eb1b0_0
+  - retina-face=0.0.13=pyhd8ed1ab_0
   - retrying=1.3.3=pyhd3eb1b0_2
   - rich=12.5.1=py39haa95532_0
   - rsa=4.7.2=pyhd3eb1b0_1
@@ -349,6 +377,7 @@ dependencies:
   - tomlkit=0.11.1=py39haa95532_0
   - toolz=0.12.0=py39haa95532_0
   - torchmetrics=0.11.2=py39hd4e2768_0
+  - torchview=0.2.6=pyhd8ed1ab_0
   - tornado=6.2=py39h2bbff1b_0
   - tqdm=4.65.0=py39hd4e2768_0
   - traitlets=5.7.1=py39haa95532_0
@@ -356,11 +385,14 @@ dependencies:
   - typing-extensions=4.5.0=py39haa95532_0
   - typing_extensions=4.5.0=py39haa95532_0
   - tzdata=2023c=h04d1e81_0
+  - ucrt=10.0.22621.0=h57928b3_0
+  - unicodedata2=15.0.0=py39ha55989b_0
   - urllib3=1.26.15=py39haa95532_0
   - uvicorn=0.20.0=py39haa95532_0
   - vc=14.2=h21ff451_1
+  - vc14_runtime=14.34.31931=h5081d32_16
   - virtualenv=20.16.2=py39haa95532_0
-  - vs2015_runtime=14.27.29016=h5e58377_2
+  - vs2015_runtime=14.34.31931=hed1258a_16
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webdriver-manager=3.8.6=pyhd8ed1ab_0
   - webencodings=0.5.1=py39haa95532_1
@@ -368,7 +400,7 @@ dependencies:
   - websockets=10.4=py39h2bbff1b_1
   - werkzeug=2.2.3=py39haa95532_0
   - wheel=0.38.4=py39haa95532_0
-  - widgetsnbextension=4.0.5=py39haa95532_0
+  - widgetsnbextension=3.6.4=pyhd8ed1ab_0
   - win_inet_pton=1.1.0=py39haa95532_0
   - winpty=0.4.3=4
   - wrapt=1.14.1=py39h2bbff1b_0
@@ -381,6 +413,8 @@ dependencies:
   - zstandard=0.19.0=py39h2bbff1b_0
   - zstd=1.5.5=hd43e919_0
   - pip:
+      - image-to-numpy==1.0.0
+      - simple-hierarchy==1.0.2 --no-deps
       - torchaudio==2.0.0
       - torchvision==0.15.0
 prefix: D:\CS\projects\graduation_project\.mamba
