--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
 name: D:\CS\projects\graduation_project\.mamba
 channels:
+  - anaconda
   - pytorch
+  - fastai
   - file:///D:/CS/projects/graduation_project/.mamba/conda-bld
   - nvidia
   - defaults
@@ -39,11 +41,11 @@ dependencies:
   - brotlipy=0.7.0=py39h2bbff1b_1003
   - bzip2=1.0.8=he774522_0
   - c-ares=1.19.0=h2bbff1b_0
-  - ca-certificates=2023.01.10=haa95532_0
+  - ca-certificates=2023.5.7=h56e8100_0
   - cachecontrol=0.12.11=py39haa95532_1
   - cachetools=4.2.2=pyhd3eb1b0_0
   - cairo=1.16.0=h63a05c6_1001
-  - certifi=2022.12.7=py39haa95532_0
+  - certifi=2023.5.7=pyhd8ed1ab_0
   - cffi=1.15.1=py39h2bbff1b_3
   - chardet=4.0.0=py39haa95532_1003
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
@@ -254,6 +256,7 @@ dependencies:
   - numpy-base=1.24.3=py39h005ec55_0
   - oauthlib=3.2.2=py39haa95532_0
   - opencv=4.6.0=py39hf11a4ad_3
+  - opencv-python-headless=4.7.0.72=py39_0
   - openjpeg=2.4.0=h4fc8c34_0
   - openssl=1.1.1t=h2bbff1b_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
@@ -335,7 +338,7 @@ dependencies:
   - re2=2022.04.01=hd77b12b_0
   - readchar=4.0.5=pyhd8ed1ab_0
   - regex=2022.7.9=py39h2bbff1b_0
-  - requests=2.29.0=py39haa95532_0
+  - requests=2.28.1=py39haa95532_0
   - requests-oauthlib=1.3.0=py_0
   - requests-toolbelt=0.9.1=pyhd3eb1b0_0
   - retina-face=0.0.13=pyhd8ed1ab_0
@@ -348,6 +351,7 @@ dependencies:
   - scipy=1.10.1=py39h321e85e_0
   - selenium=3.141.0=py39h2bbff1b_1000
   - send2trash=1.8.0=pyhd3eb1b0_1
+  - sentry-sdk=1.9.0=py39haa95532_0
   - setuptools=66.0.0=py39haa95532_0
   - shellingham=1.5.0=py39haa95532_0
   - sip=6.6.2=py39hd77b12b_0
@@ -413,8 +417,10 @@ dependencies:
   - zstandard=0.19.0=py39h2bbff1b_0
   - zstd=1.5.5=hd43e919_0
   - pip:
+      - fastdup==1.4
       - image-to-numpy==1.0.0
-      - simple-hierarchy==1.0.2 --no-deps
+      - pipdeptree==2.7.1
+      - simple-hierarchy==1.0.2
       - torchaudio==2.0.0
       - torchvision==0.15.0
 prefix: D:\CS\projects\graduation_project\.mamba
