trained m01.6 on dataset v01.1 (to do: push csvs once LFS bandwidth renews)

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ dataset_related/val_data_features_v01.csv
 dataset_related/imgsPropsv0.csv
 dataset_related/imgsPropsv1.csv
 dataset_related/imgsPropsv2.csv
+dataset_related/imgsPropsv1.csv
