--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - _py-xgboost-mutex=2.0=cpu_0
   - _tflow_select=2.1.0=gpu
   - abseil-cpp=20211102.0=hd77b12b_0
   - absl-py=1.3.0=py39haa95532_0
@@ -212,6 +213,7 @@ dependencies:
   - libvorbis=1.3.7=he774522_0
   - libwebp=1.2.4=hbc33d0d_1
   - libwebp-base=1.2.4=h2bbff1b_1
+  - libxgboost=1.7.4=cpu_h20390bd_2
   - libxml2=2.10.3=h0ad7f3c_0
   - libxslt=1.1.37=h2bbff1b_0
   - lightning=2.0.1.post0=pyhd8ed1ab_0
@@ -258,7 +260,7 @@ dependencies:
   - opencv=4.6.0=py39hf11a4ad_3
   - opencv-python-headless=4.7.0.72=py39_0
   - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=1.1.1t=h2bbff1b_0
+  - openssl=1.1.1u=hcfcfb64_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - ordered-set=4.1.0=pyhd8ed1ab_0
   - orjson=3.8.8=py39h2bbff1b_0
@@ -292,6 +294,8 @@ dependencies:
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - py-lief=0.12.3=py39hd77b12b_0
+  - py-xgboost=1.7.4=cpu_py39ha538f94_2
+  - pyaml=23.5.9=pyhd8ed1ab_0
   - pyasn1=0.4.8=pyhd3eb1b0_0
   - pyasn1-modules=0.2.8=py_0
   - pycosat=0.6.4=py39h2bbff1b_0
@@ -348,6 +352,7 @@ dependencies:
   - ruamel.yaml=0.17.21=py39h2bbff1b_0
   - ruamel.yaml.clib=0.2.6=py39h2bbff1b_1
   - scikit-learn=1.2.2=py39hd77b12b_0
+  - scikit-optimize=0.9.0=pyhd8ed1ab_1
   - scipy=1.10.1=py39h321e85e_0
   - selenium=3.141.0=py39h2bbff1b_1000
   - send2trash=1.8.0=pyhd3eb1b0_1
@@ -364,6 +369,7 @@ dependencies:
   - starlette=0.22.0=pyhd8ed1ab_0
   - starsessions=1.3.0=pyhd8ed1ab_0
   - sympy=1.11.1=py39haa95532_0
+  - tabulate=0.8.10=py39haa95532_0
   - tenacity=8.2.2=py39haa95532_0
   - tensorboard=2.10.0=py39haa95532_0
   - tensorboard-data-server=0.6.1=py39haa95532_0
@@ -408,6 +414,7 @@ dependencies:
   - win_inet_pton=1.1.0=py39haa95532_0
   - winpty=0.4.3=4
   - wrapt=1.14.1=py39h2bbff1b_0
+  - xgboost=1.7.4=cpu_py39ha538f94_2
   - xz=5.4.2=h8cc25b3_0
   - yaml=0.2.5=he774522_0
   - yarl=1.8.1=py39h2bbff1b_0
